Added new resume

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             <div class="navbar-nav m-auto py-0">
                 <a href="#home" class="nav-item nav-link active">Home</a>
                 <a href="#about" class="nav-item nav-link">About</a>
-                <a href="#qualification" class="nav-item nav-link">Education & Experiences</a>
-                <a href="#skill" class="nav-item nav-link">Skill</a>
+                <a href="#qualification" class="nav-item nav-link">Experience</a>
+                <a href="#skill" class="nav-item nav-link">Skills</a>
                 <a href="#portfolio" class="nav-item nav-link">Portfolio</a>
             </div>
         </div>
@@ -120,21 +120,29 @@
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Bachelor's Degree - Illinois Wesleyan University</h5>
-                            <p class="mb-2"><strong>Computer Science & Data Science</strong></p>
-                            <p>Cumulative GPA: 3.73 | Dean's List: 2022 - Present</p>
+                            <h5 class=" mb-1">Bachelor's Degree - Illinois Wesleyan University</h5>
+                            <p class="mb-2">Computer Science & Data Science</p>
+                            <p>Cumulative GPA: 3.73</p>
+                            <p>Dean's List: 2022 - Present</p>
                         </div>
                     </div>
 
 
                     <h3 class="mb-4">Professional Experience</h3>
                     <div class="border-left border-primary pt-2 pl-4 ml-2">
+                        <div class="position-relative mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute"
+                                style="top: 2px; left: -32px;"></i>
+                            <h5 class="font-weight-bold mb-1">UI/UX Design Intern</h5>
+                            <p class="mb-2"><strong>GROWMARK Inc. - Present</strong></p>
+                            <p>Troubleshoot and investigate IT-related issues for students, faculty, and staff; responsible for handling operational systems, computer hardware, and third-party tools.</p>
+                        </div>
 
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Titan Study Tables - Illinois Wesleyan Athletics</h5>
-                            <p class="mb-2"><strong>Full Stack Development - 2024</strong></p>
+                            <h5 class="font-weight-bold mb-1">Full-Stack Developer</h5>
+                            <p class="mb-2"><strong>Illinois Wesleyan Athletics - 2024-2025</strong></p>
                             <p>
                                 Developed a full stack application that allows student-athletes to track their study time at study tables. The application gathers and presents this data in weekly reports to student-athletes, coaches, and athletic directors, as a way to keep track of student-athletes' academic progress.
                             </p>
@@ -146,14 +154,6 @@
                             <h5 class="font-weight-bold mb-1">Jibi - The Comic Book Review Platform</h5>
                             <p class="mb-2"><strong>Full Stack Development - 2024</strong></p>
                             <p>Designed a social media application for comic book enthusiasts to upload reviews, ratings, and photos of comic books. Duties include impriving the user experience and interface. Application in progress.</p>
-                        </div>
-
-                        <div class="position-relative mb-4">
-                            <i class="far fa-dot-circle text-primary position-absolute"
-                                style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">IT Student Associate - IWU Information Technology</h5>
-                            <p class="mb-2"><strong>Information Technology - 2024</strong></p>
-                            <p>Troubleshoot and investigate IT-related issues for students, faculty, and staff; responsible for handling operational systems, computer hardware, and third-party tools.</p>
                         </div>
                     </div>
 
