Finalized experience section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <a href="#about" class="nav-item nav-link">About</a>
                 <a href="#qualification" class="nav-item nav-link">Experience</a>
                 <a href="#skill" class="nav-item nav-link">Skills</a>
-                <a href="#portfolio" class="nav-item nav-link">Portfolio</a>
+                <a href="#portfolio" class="nav-item nav-link">Projects</a>
             </div>
         </div>
     </nav>
@@ -127,39 +127,7 @@
                         </div>
                     </div>
 
-
-                    <h3 class="mb-4">Professional Experience</h3>
-                    <div class="border-left border-primary pt-2 pl-4 ml-2">
-                        <div class="position-relative mb-4">
-                            <i class="far fa-dot-circle text-primary position-absolute"
-                                style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">UI/UX Design Intern</h5>
-                            <p class="mb-2"><strong>GROWMARK Inc. - Present</strong></p>
-                            <p>Troubleshoot and investigate IT-related issues for students, faculty, and staff; responsible for handling operational systems, computer hardware, and third-party tools.</p>
-                        </div>
-
-                        <div class="position-relative mb-4">
-                            <i class="far fa-dot-circle text-primary position-absolute"
-                                style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Full-Stack Developer</h5>
-                            <p class="mb-2"><strong>Illinois Wesleyan Athletics - 2024-2025</strong></p>
-                            <p>
-                                Developed a full stack application that allows student-athletes to track their study time at study tables. The application gathers and presents this data in weekly reports to student-athletes, coaches, and athletic directors, as a way to keep track of student-athletes' academic progress.
-                            </p>
-                        </div>
-
-                        <div class="position-relative mb-4">
-                            <i class="far fa-dot-circle text-primary position-absolute"
-                                style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Jibi - The Comic Book Review Platform</h5>
-                            <p class="mb-2"><strong>Full Stack Development - 2024</strong></p>
-                            <p>Designed a social media application for comic book enthusiasts to upload reviews, ratings, and photos of comic books. Duties include impriving the user experience and interface. Application in progress.</p>
-                        </div>
-                    </div>
-
-                </div>
-                <div class="col-lg-6">
-                    <h3 class="mb-4">Courses & Certifications</h3>
+                    <h3 class="mb-4">Certifications</h3>
                     <div class="border-left border-primary pt-2 pl-4 ml-2">
 
 
@@ -207,6 +175,36 @@
                             <p class="mb-2"><strong>School of Art, Games and Animation (SAGA)</strong> |
                                 <small>2019-2021</small>
                             </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <h3 class="mb-4">Professional Experience</h3>
+                    <div class="border-left border-primary pt-2 pl-4 ml-2">
+                        <div class="position-relative mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute"
+                                style="top: 2px; left: -32px;"></i>
+                            <h5 class="font-weight-bold mb-1">UI/UX Design Intern</h5>
+                            <p class="mb-2"><strong>GROWMARK Inc. - Present</strong></p>
+                            <p>Designed and launched interactive dashboards for CFOs and Controllers, guided by user research and iterative wireframing. Led UI/UX efforts through low- and high-fidelity prototypes, stakeholder feedback loops, and accessibility-focused testing.</p>
+                        </div>
+
+                        <div class="position-relative mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute"
+                                style="top: 2px; left: -32px;"></i>
+                            <h5 class="font-weight-bold mb-1">Full-Stack Developer</h5>
+                            <p class="mb-2"><strong>Illinois Wesleyan Athletics - 2024-2025</strong></p>
+                            <p>
+                                Led UI/UX design and front-end development for a full-stack web application used by 700+ student-athletes to track study hours and class attendance. Conducted user interviews with academic coordinators and coaches to guide user-centric design, and collaborated with a team of developers to implement features like user authentication, QR code login, and administrative reporting.
+                            </p>
+                        </div>
+
+                        <div class="position-relative mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute"
+                                style="top: 2px; left: -32px;"></i>
+                            <h5 class="font-weight-bold mb-1">Jibi - The Comic Book Review Platform</h5>
+                            <p class="mb-2"><strong>Full Stack Development - 2024</strong></p>
+                            <p>Designed a social media application for comic book enthusiasts to upload reviews, ratings, and photos of comic books. Duties include improving the user experience and interface. Application in progress.</p>
                         </div>
                     </div>
                 </div>
