Updated descriptions and new job position

--- a/index.html
+++ b/index.html
@@ -82,29 +82,20 @@
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">I'm Luiz</h3>
-                    <p>A passionate and creative Computer Science Major from Brazil, currently living in Illinois. I have been studying and learning about computer-science-related topics for three years now, and since the beginning, I've been fascinated by the world of technology. As I showcase my work in this portfolio, I aim to demonstrate my passion for computer science and highlight the projects that reflect my skills, creativity, and dedication.
+                    <p>I'm a curious and creative Computer Science major from Brazil, currently based in Illinois. Over the past five years, I've been diving deep into the world of technology, exploring everything from Quantum Computing to user experience design. What started as a fascination has grown into a true passion for building thoughtful, functional, and impactful solutions. This portfolio showcases the projects that have shaped my skills, challenged my creativity, and fueled my dedication to the field.
                     </p>
                     <div class="row mb-3">
                         <div class="col-sm-6 py-2">
                             <h6>Name: <span class="text-secondary">Luiz Bossetto</span></h6>
                         </div>
                         <div class="col-sm-6 py-2">
-                            <h6>Birthday: <span class="text-secondary">30 January 2004</span></h6>
-                        </div>
-                        <div class="col-sm-6 py-2">
-                            <h6>Degree: <span class="text-secondary">Bachelor's Degree (in progress)</span></h6>
-                        </div>
-                        <div class="col-sm-6 py-2">
-                            <h6>Years of experience: <span class="text-secondary">4 Years (self-taught since 2020 and now in college)</span></h6>
+                            <h6>Years of experience: <span class="text-secondary">4 years</span></h6>
                         </div>
                         <div class="col-sm-6 py-2">
                             <h6>Nationality: <span class="text-secondary">Brazilian</span></h6>
                         </div>
                         <div class="col-sm-6 py-2">
-                            <h6>Email: <span class="text-secondary">luiz.fbossetto@outlook.com</span></h6>
-                        </div>
-                        <div class="col-sm-6 py-2">
-                            <h6>Hobbies: <span class="text-secondary">Read, Code, Travel, Play the Guitar</span></h6>
+                            <h6>Hobbies: <span class="text-secondary">Read, Code, Board Games</span></h6>
                         </div>
                     </div>
                 </div>
@@ -122,51 +113,18 @@
             </div>
             <div class="row align-items-center">
                 <div class="col-lg-6">
-                    <h3 class="mb-4">My Education</h3>
+                    <h3 class="mb-4">Education</h3>
                     <div class="border-left border-primary pt-2 pl-4 ml-2">
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Bachelor's Degree - Illinois Wesleyan University</h5>
                             <p class="mb-2"><strong>Computer Science & Data Science</strong></p>
-                            <p>Cumulative GPA: 3.73 | Dean's List: 2022 - Present</p>
+                            <p>Cumulative GPA: 3.74 | Dean's List: 2022 - Present</p>
                         </div>
                     </div>
 
-
-                    <h3 class="mb-4">Professional Experience</h3>
-                    <div class="border-left border-primary pt-2 pl-4 ml-2">
-
-                        <div class="position-relative mb-4">
-                            <i class="far fa-dot-circle text-primary position-absolute"
-                                style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Titan Study Tables - Illinois Wesleyan Athletics</h5>
-                            <p class="mb-2"><strong>Full Stack Development - 2024</strong></p>
-                            <p>
-                                Developed a full stack application that allows student-athletes to track their study time at study tables. The application gathers and presents this data in weekly reports to student-athletes, coaches, and athletic directors, as a way to keep track of student-athletes' academic progress.
-                            </p>
-                        </div>
-
-                        <div class="position-relative mb-4">
-                            <i class="far fa-dot-circle text-primary position-absolute"
-                                style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Jibi - The Comic Book Review Platform</h5>
-                            <p class="mb-2"><strong>Full Stack Development - 2024</strong></p>
-                            <p>Designed a social media application for comic book enthusiasts to upload reviews, ratings, and photos of comic books. Duties include impriving the user experience and interface. Application in progress.</p>
-                        </div>
-
-                        <div class="position-relative mb-4">
-                            <i class="far fa-dot-circle text-primary position-absolute"
-                                style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">IT Student Associate - IWU Information Technology</h5>
-                            <p class="mb-2"><strong>Information Technology - 2024</strong></p>
-                            <p>Troubleshoot and investigate IT-related issues for students, faculty, and staff; responsible for handling operational systems, computer hardware, and third-party tools.</p>
-                        </div>
-                    </div>
-
-                </div>
-                <div class="col-lg-6">
-                    <h3 class="mb-4">Courses & Certifications</h3>
+                    <h3 class="mb-4">Certifications</h3>
                     <div class="border-left border-primary pt-2 pl-4 ml-2">
 
 
@@ -199,21 +157,48 @@
                             <p class="mb-2"><strong>Geek University</strong> | <small>2022</small></p>
                         </div>
 
+                        <div class="position-relative mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute"
+                                style="top: 2px; left: -32px;"></i>
+                            <h5 class="font-weight-bold mb-1">Digital Art, Design, and Animation</h5>
+                            <p class="mb-2"><strong>School of Art, Games and Animation (SAGA)</strong> |
+                                <small>2019-2021</small>
+                            </p>
+                        </div>
+                    </div>
+
+
+                    
+
+                </div>
+                <div class="col-lg-6">
+                    <h3 class="mb-4">Professional Experience</h3>
+                    <div class="border-left border-primary pt-2 pl-4 ml-2">
 
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">CS50's Introduction to Computer Science</h5>
-                            <p class="mb-2"><strong>Harvard University</strong> | <small>2021 - 2022</small></p>
+                            <h5 class="font-weight-bold mb-1">UI/UX Design Intern</h5>
+                            <p class="mb-2"><strong>GROWMARK  Inc. - Present</strong></p>
+                            <p>Designed and launched interactive dashboards for CFOs and Controllers, guided by user research and iterative wireframing. Led UI/UX efforts through low- and high-fidelity prototypes, stakeholder feedback loops, and accessibility-focused testing.</p>
                         </div>
 
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Digital Art, Design, and Animation Course</h5>
-                            <p class="mb-2"><strong>School of Art, Games and Animation (SAGA)</strong> |
-                                <small>2019-2021</small>
+                            <h5 class="font-weight-bold mb-1">Titan Study Tables - Illinois Wesleyan Athletics</h5>
+                            <p class="mb-2"><strong>Full Stack Development - 2024</strong></p>
+                            <p>
+                                Led UI/UX design and front-end development for a full-stack web application used by 700+ student-athletes to track study hours and class attendance. Conducted user interviews with academic coordinators and coaches to guide user-centric design, and collaborated with a team of developers to implement features like user authentication, QR code login, and administrative reporting.
                             </p>
+                        </div>
+
+                        <div class="position-relative mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute"
+                                style="top: 2px; left: -32px;"></i>
+                            <h5 class="font-weight-bold mb-1">Jibi - The Comic Book Review Platform</h5>
+                            <p class="mb-2"><strong>Full Stack Development - 2024</strong></p>
+                            <p>Designed a social media application for comic book enthusiasts to upload reviews, ratings, and photos of comic books. Duties include improving the user experience and interface. Application in progress.</p>
                         </div>
                     </div>
                 </div>
